src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Codigo_Giro__c</fullName>
        <label>Código Giro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comision_Pedido__c</fullName>
        <label>Comisión Pedido</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complejo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complejo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defection_main_reasons__c</fullName>
        <label>Deserción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical delivery</fullName>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Client Expectations</fullName>
                </value>
                <value>
                    <fullName>Competitions</fullName>
                </value>
                <value>
                    <fullName>Service cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentacion_Entregada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación Entregada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documento_Firmado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documento Firmado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Contratos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Contratos</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Farmer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contratos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Encuesta_Enviada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encuesta Enviada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envia_Correo_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envia Correo Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excepcion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excepción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excepcion_regularizada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excepción regularizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_de_entrega_de_Documentacion__c</fullName>
        <label>Fecha de entrega de Documentación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_de_regularizaci_n__c</fullName>
        <label>Fecha estimada de regularización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_y_hora_de_Regularizaci_n__c</fullName>
        <label>Fecha y hora de Regularización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_y_hora_de_ingreso_a_Contratos__c</fullName>
        <label>Fecha y hora de ingreso a Contratos</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_y_hora_ingreso_SodexoAgil__c</fullName>
        <label>Fecha y hora ingreso Sodexo Ágil</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gestor__c</fullName>
        <formula>Owner.Manager.FirstName + &apos; &apos; + Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giro__c</fullName>
        <label>Giro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interlocutor_Operativo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interlocutor Operativo</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contratos</relationshipLabel>
        <relationshipName>Contratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kit_Enviaddo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit Enviaddo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mensaje_de_Integracion__c</fullName>
        <description>Campo que recibe el mensaje de error o excepción al hacer la llamada al servicio &quot;Client/Registrar&quot; o &quot;Client/Editar&quot;</description>
        <inlineHelpText>Campo que recibe el mensaje de error o excepción al hacer la llamada al servicio &quot;Client/Registrar&quot; o &quot;Client/Editar&quot;</inlineHelpText>
        <label>Mensaje de Integración</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnBoarding_Exitoso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnBoarding Exitoso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producto_Sodexo_Agil__c</fullName>
        <label>Producto Sodexo Agil</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SDX_Segmento__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                    <label>TARJETA FOOD PASS MASTERCARD</label>
                </value>
                <value>
                    <fullName>67</fullName>
                    <label>TARJETA FOOD PASS VISA</label>
                </value>
                <value>
                    <fullName>66</fullName>
                    <label>TARJETA FOOD PASS VISA NAVIDAD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>TARJETA GASO PASS</label>
                </value>
                <value>
                    <fullName>41</fullName>
                    <label>TARJETA GASO PASS CONTROL MC</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>TARJETA PREMIUM PASS MASTERCARD</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>TARJETA PREMIUM PASS MC ANIV. DE EMPRESA</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>TARJETA PREMIUM PASS MC CUMPLEAÑOS</label>
                </value>
                <value>
                    <fullName>36</fullName>
                    <label>TARJETA PREMIUM PASS MC DIA DE LA MADRE</label>
                </value>
                <value>
                    <fullName>37</fullName>
                    <label>TARJETA PREMIUM PASS MC DIA DE LA SECRETARIA</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>TARJETA PREMIUM PASS MC DIA DEL EMPLEADO</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>TARJETA PREMIUM PASS MC DIA DEL PADRE</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>TARJETA PREMIUM PASS MC DIA DEL TRABAJO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>TARJETA PREMIUM PASS MC EMPLEADO DEL MES</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>TARJETA PREMIUM PASS MC ESCOLARIDAD</label>
                </value>
                <value>
                    <fullName>39</fullName>
                    <label>TARJETA PREMIUM PASS MC OTROS</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>TARJETA PREMIUM PASS NAVIDEÑO</label>
                </value>
                <value>
                    <fullName>45</fullName>
                    <label>TARJETA PREMIUM PASS VISA ANIV. DE EMPRESA</label>
                </value>
                <value>
                    <fullName>46</fullName>
                    <label>TARJETA PREMIUM PASS VISA CUMPLEAÑOS</label>
                </value>
                <value>
                    <fullName>49</fullName>
                    <label>TARJETA PREMIUM PASS VISA DIA DE LA MADRE</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>TARJETA PREMIUM PASS VISA DIA DE LA SECRETARIA</label>
                </value>
                <value>
                    <fullName>53</fullName>
                    <label>TARJETA PREMIUM PASS VISA DIA DEL EMPLEADO</label>
                </value>
                <value>
                    <fullName>47</fullName>
                    <label>TARJETA PREMIUM PASS VISA DIA DEL PADRE</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>TARJETA PREMIUM PASS VISA DIA DEL TRABAJO</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>TARJETA PREMIUM PASS VISA EMPLEADO DEL MES</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>TARJETA PREMIUM PASS VISA ESCOLARIDAD</label>
                </value>
                <value>
                    <fullName>48</fullName>
                    <label>TARJETA PREMIUM PASS VISA INCENTIVOS</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>TARJETA PREMIUM PASS VISA NAVIDAD</label>
                </value>
                <value>
                    <fullName>52</fullName>
                    <label>TARJETA PREMIUM PASS VISA OTROS</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>TARJETA PREMIUM PASS VISA PP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RUC_Firmado_por_Cliente__c</fullName>
        <formula>CustomerSigned.Numero_de_Documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RUC Firmado por Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeOppty__c</fullName>
        <description>Filtra vistas de listas y agilizar la gestión del área</description>
        <formula>SBQQ__Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área de Origen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta_Exitosa_de_Integracion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado para indicar si la llamada al servicio Client/Registrar o Client/Editar fue exitosa.</description>
        <inlineHelpText>Campo utilizado para indicar si la llamada al servicio Client/Registrar o Client/Editar fue exitosa.</inlineHelpText>
        <label>Respuesta Exitosa de Integración</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c), EndDate &gt;= TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>Price Book ID of the related opportunity or quote.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity__c)), SBQQ__Opportunity__r.Pricebook2Id, SBQQ__Quote__r.SBQQ__PricebookId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of the Price Book used from the original Opportunity.</inlineHelpText>
        <label>Opportunity or Quote Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOOD</fullName>
                </value>
                <value>
                    <fullName>MEAL</fullName>
                </value>
                <value>
                    <fullName>GIFT</fullName>
                </value>
                <value>
                    <fullName>EXTERNAL ESTIMULATION</fullName>
                </value>
                <value>
                    <fullName>FUEL &amp; FLEET</fullName>
                </value>
                <value>
                    <fullName>EDUCATION</fullName>
                </value>
                <value>
                    <fullName>MULTISEGMENTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Contratos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Contratos</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contratos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Registro_Oppty__c</fullName>
        <formula>SBQQ__Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Registro Oppty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_negocio__c</fullName>
        <formula>TEXT(SBQQ__Opportunity__r.SDX_Segmento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de negocio</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CNT00001_ValidaDatosEjecutivo</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISCHANGED(Status), 
    ISPICKVAL(Status, &quot;Documentación Completa&quot;),
				OR(
								ISBLANK(Account.SDX_Numero_de_documento__c),
	       Account.Direcciones_Principales__c &lt; 1, 
		      ISBLANK(Account.SDX_Nombre_Comercial__c), 
			     ISBLANK(Account.Phone), 
				    ISBLANK(SBQQ__Opportunity__r.Email_Pedidos__c), 
					   ISBLANK(Account.Correo_facturacion__c), 
						  ISBLANK(TEXT(Producto_Sodexo_Agil__c))
								)
				)</errorConditionFormula>
        <errorMessage>Debes procurar completar la información necesaria para avanzar a la siguiente etapa del proceso.
Para esto debes completar: Número de documento, Dirección principal, teléfono, correo electrónico de facturación, Email Pedidos y Producto Sodexo Ágil.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CNT00002_ValidaDatosContrato</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISCHANGED(Status), 
    ISPICKVAL(Status, &quot;En Creación&quot;),
				OR(
								ISBLANK(TEXT(Producto_Sodexo_Agil__c)),
								ISBLANK(Comision_Pedido__c)
								)
				)</errorConditionFormula>
        <errorMessage>Debes procurar completar la información necesaria para avanzar a la siguiente etapa del proceso.
Para esto debes completar: Producto Sodexo Ágil y Comisión Pedido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CNT00003_ComisionPedido</fullName>
        <active>true</active>
        <errorConditionFormula>Comision_Pedido__c &lt; 0.0</errorConditionFormula>
        <errorMessage>La comisión del pedido debe ser mayor a 0</errorMessage>
    </validationRules>
</CustomObject>